# layerz

./: .gitignore  ACCEPTANCE.md  CMakeLists.txt  PROJECT.md  README.md  ROADMAP.md  USAGE.md
.github/workflows/: ci.yml
.paul/: HANDOFF-2026-05-30.md  PROJECT.md  ROADMAP.md  STATE.md  config.md  paul.json
.paul/phases/01-scaffolding-spikes/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-PHASE-AUDIT.md
.paul/phases/02-beat-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-PHASE-AUDIT.md
.paul/phases/03-bass-multipattern/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-PHASE-AUDIT.md
.paul/phases/04-groove-engine/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-PHASE-AUDIT.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/audio/: AestheticResolver.cpp  AestheticResolver.h  AudioThreadGuard.h  BeatSequencer.cpp  BeatSequencer.h  ChainManager.cpp  ChainManager.h  Clock.cpp  Clock.h  DrumVoice.cpp  DrumVoice.h  MonoSynth.cpp  MonoSynth.h  ProfileConfig.h  VoiceBank.cpp  VoiceBank.h
Source/bench/: VoiceBench.cpp
Source/config/: UserConfig.cpp  UserConfig.h
Source/gui/: BassLayerStrip.cpp  BassLayerStrip.h  BeatLayerStrip.cpp  BeatLayerStrip.h  GroovePanel.cpp  GroovePanel.h  PatternSelector.cpp  PatternSelector.h  PitchedStepRow.cpp  PitchedStepRow.h  StepRow.cpp  StepRow.h  VoiceParamPanel.cpp  VoiceParamPanel.h
Source/model/: ProjectStore.cpp  ProjectStore.h  Schema.h
docs/spikes/: F0.99-performance-budget.md  F0.99b-thread-safety.md  F3.99-groove-accuracy.md  bench_results_MacM4.tsv  bench_results_PCI7LenovoS145.tsv  bench_results_PCRyzen9RTX5070.tsv
